Bug 324961 live bookmark is shown in UTF8 even if should be ISO-8859-1 r=vlad